deploy/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vulpine
spec:
  template:
    spec:
      containers:
        - name: vulpine
          image: ilmannafian/vulpine:latest
          resources:
            limits:
              memory: "10Mi"
              cpu: "10m"
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            periodSeconds: 5
